# vcpkg-template

./: .gitignore  CMakeLists.txt  main.cpp  vcpkg.json  vcpkg.json.bak
.cache/clangd/index/: main.cpp.3BF5ECEEED4B5EFF.idx  main.cpp.49BCF848DBD738E9.idx  mainwindow.cpp.420D88C2991FBFCE.idx  mainwindow.cpp.C2BBB873FC05ED25.idx  mainwindow.h.4E3065E01661C0DE.idx  mainwindow.h.A3F65A03427DA985.idx
